--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
         "realrashid/sweet-alert": "^3.1",
         "sudiptpa/guid": "^1.0",
         "sudiptpa/ipstack": "^1.3",
