--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "moment": "^2.29.1",
+        "vue-chat-scroll": "^1.4.0",
+        "vuex": "^3.5.1"
     }
 }
