--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "beyondcode/laravel-websockets": "^1.9",
         "cbschuld/browser.php": "^1.9",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
@@ -17,6 +18,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "pusher/pusher-php-server": "~3.0",
         "realrashid/sweet-alert": "^3.1",
         "sudiptpa/guid": "^1.0",
         "sudiptpa/ipstack": "^1.3",
