--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "laravel-echo": "^1.9.0",
         "moment": "^2.29.1",
+        "pusher-js": "^7.0.0",
         "vue-chat-scroll": "^1.4.0",
+        "vue-upload-component": "^2.8.20",
         "vuex": "^3.5.1"
     }
 }
