--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3",
         "beyondcode/laravel-websockets": "^1.9",
         "cbschuld/browser.php": "^1.9",
+        "cviebrock/eloquent-sluggable": "^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -18,6 +19,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "laravelista/comments": "^4.4",
         "pusher/pusher-php-server": "~4.0",
         "realrashid/sweet-alert": "^3.1",
         "sudiptpa/guid": "^1.0",
